<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intervalator2</string>
    <string name="action_settings">Settings</string>
    <string name="from">From:</string>
    <string name="selNoteBtn">Select note</string>
    <string name="to">To:</string>
    <string name="direction">Direction:</string>
    <string name="dirUp">Up</string>
    <string name="dirDown">Down</string>
    <string name="goBtn">Go</string>
    <string name="resetBtn">Reset</string>
    <string name="hintOutput">Result here</string>
    <string name="textOutput">Your interval is a </string>
    <string name="warning">The 2nd note must be above the 1st one</string>
    <string name="btnSharp">Sharp</string>
    <string name="btnNatural">Natural</string>
    <string name="btnFlat">Flat</string>
    <string name="notesTitle">Starting Note:</string>
    <string name="selC">C</string>
    <string name="selD">D</string>
    <string name="selE">E</string>
    <string name="selF">F</string>
    <string name="selG">G</string>
    <string name="selA">A</string>
    <string name="selB">B</string>
    <string-array name="notesList">
        <item >@string/selC</item>
        <item >@string/selD</item>
        <item >@string/selE</item>
        <item >@string/selF</item>
        <item >@string/selG</item>
        <item >@string/selA</item>
        <item >@string/selB</item>
    </string-array>
    <string name="welcome_title">¡Welcome to Intervalator 2!</string>
    <string name="welcome_subtitle">Just another silly interval calculator</string>
    <string name="btnStart">Start</string>

</resources>