<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tVnote1"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/from"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnNote1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/selNoteBtn" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/note1Sharp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSharp"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/note1Natural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNatural"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/note1Flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFlat"
                android:textSize="15sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/tVnote2"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/to"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnNote2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/selNoteBtn" />
                <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/note2Sharp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSharp"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/note2Natural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNatural"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/note2Flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFlat"
                android:textSize="15sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row2"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/tVdirection"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/direction"
            android:textSize="20dp" />

        <RadioGroup
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" >

            <RadioButton
                android:id="@+id/btnDirUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/dirUp" />

            <RadioButton
                android:id="@+id/btnDirDown"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/dirDown" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row3"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btnGo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/goBtn" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resetBtn" />
    </LinearLayout>

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row4"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:hint="@string/hintOutput"
        android:textSize="20dp" />

</RelativeLayout>